--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: simplaarr
     ports:
       - "8000:8000"
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=all
+    # environment:
+      # - NVIDIA_VISIBLE_DEVICES=all
+      # - NVIDIA_DRIVER_CAPABILITIES=all
     volumes:
       - ./config:/config
       - ./logs:/logs
@@ -15,4 +15,4 @@ services:
       - ./media-encoded:/media-encoded
       - ./data:/data
     restart: unless-stopped
-    gpus: all
+    # gpus: all
